# NNetwork_DIY

./: README.md  main.py
C_translation/: CMakeLists.txt
main_python/: data_tools.py  data_viewer.py  dataset_saver.py  layers.py  main.py  network.py  utilities.py
models/first_correct/: l0.pkl  l1.pkl  l2.pkl  l3.pkl
python/: data_tools.py  layers.py  main.py  network.py
tensorflow_bonus/: main.py
